// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-radio"
  >
    <span
      class="t-radio-wrap"
    >
      <input
        class="t-radio__former"
        readonly=""
        type="radio"
      />
      <i
        class="t-radio__dot"
      />
    </span>
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      未选中
    </span>
  </label>
  <label
    class="t-radio t-is-checked"
  >
    <span
      class="t-radio-wrap"
    >
      <input
        checked=""
        class="t-radio__former"
        readonly=""
        type="radio"
      />
      <i
        class="t-radio__dot"
      />
    </span>
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      已选中
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <span
      class="t-radio-wrap"
    >
      <input
        class="t-radio__former"
        disabled=""
        readonly=""
        type="radio"
      />
      <i
        class="t-radio__dot"
      />
    </span>
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      禁用未选中
    </span>
  </label>
  <label
    class="t-radio t-is-checked t-is-disabled"
  >
    <span
      class="t-radio-wrap"
    >
      <input
        checked=""
        class="t-radio__former"
        disabled=""
        readonly=""
        type="radio"
      />
      <i
        class="t-radio__dot"
      />
    </span>
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      禁用已选中
    </span>
  </label>
</DocumentFragment>
`;

exports[`button.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-default"
  >
    <label
      class="t-radio-button t-is-checked"
      name="china"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        中国
      </span>
    </label>
    <label
      class="t-radio-button t-is-disabled"
      name="usa"
    >
      <input
        class="t-radio-button__former"
        disabled=""
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        美国
      </span>
    </label>
    <label
      class="t-radio-button"
      name="england"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        英国
      </span>
    </label>
    <label
      class="t-radio-button"
      name="japan"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        日本
      </span>
    </label>
    <label
      class="t-radio-button"
      name="korea"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        韩国
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-solid t-radio-group-small"
  >
    <label
      class="t-radio-button t-is-checked"
      name="bj"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button t-is-disabled"
      name="sh"
    >
      <input
        class="t-radio-button__former"
        disabled=""
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
      name="gz"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sz"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
    <label
      class="t-radio-button"
      name="xm"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        厦门
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-default"
  >
    <label
      class="t-radio t-is-checked"
      name="male"
    >
      <span
        class="t-radio-wrap"
      >
        <input
          checked=""
          class="t-radio__former"
          readonly=""
          type="radio"
        />
        <i
          class="t-radio__dot"
        />
      </span>
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        男性
      </span>
    </label>
    <label
      class="t-radio"
      name="female"
    >
      <span
        class="t-radio-wrap"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
        />
        <i
          class="t-radio__dot"
        />
      </span>
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        女性
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-small"
  >
    <label
      class="t-radio-button"
      name="bj"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sh"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
      name="gz"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sz"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-default"
  >
    <label
      class="t-radio-button"
      name="bj1"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sh1"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
      name="gz1"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sz1"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-large"
  >
    <label
      class="t-radio-button"
      name="bj2"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sh2"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
      name="gz2"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
      name="sz2"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
</DocumentFragment>
`;
